--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
               <a class="nav-link text-primary mx-3" href="#">수파자 홈페이지</a>
             </li>     
           </ul>
-          <div class="btn btn-primary">
-            <h5 class="text-white m-0 fw-semi-bold">기부하기</h5>
+          <div class="btn btn-primary px-3">
+            <h5 class="text-white m-0 fw-semi-bold" style="letter-spacing: 0.5px;">수업시간 선물하기</h5>
           </div>
         </div>
       </div>
@@ -115,9 +115,9 @@
                       </div>
                       <div class="overflow-hidden">
                         <p class="text-white mt-md-5 mt-2" data-zanim-xs='{"delay":0.9}'>
-                          소방관 아버지를 떠나보내고 <br>
-                          믿기지 않을 만큼 힘들었던 시간. <br>
-                          그러던 중, 선명 장학 멘토링의 도움으로 <br>  
+                          화재진압 중 아버지를 떠나보내고 <br> 
+                          홀로 저희 둘을 키우시게 된 어머니 <br>
+                          그러던 중, 선명 장학 멘토링의 도움으로 <br>
                           공부에 대한 자신감과 ‘할 수 있다’는 용기를 얻었습니다.
                         </p>
                       </div>
@@ -225,7 +225,7 @@
                 </div>
               </h2>
               <div class="overflow-hidden">
-                <p class="mt-2 onlyPC" data-zanim-xs='{"delay":0.3}'>
+                <p class="mt-4 onlyPC" data-zanim-xs='{"delay":0.3}'>
                   수파자는 1960년부터 약 2,000여 명의 학생에게 <br>
                   무상교육을 제공한 선명고등공민학교의 이념을 이어받았습니다. <br>
                   온라인 화상 수업 서비스를 통해 <br>
@@ -234,13 +234,13 @@
                   비콥(B Corp) 인증을 획득했습니다.
                 </p>
               </div>
-              <div class="mt-md-5 mt-3" data-zanim-xs='{"delay":0.4}'>
+              <!-- <div class="mt-md-5 mt-3" data-zanim-xs='{"delay":0.4}'>
                 <a class="fw-semi-bold btn btn-primary" href="#!">
                   <h4 class="text-white fw-semi-bold mb-0">
                     자세히 보기
                   </h4>
                 </a>
-              </div>
+              </div> -->
             </div>
             <div class="col-lg-6 mt-6 ps-lg-6 mt-lg-0">
               <div class="text-md-center text-start rounded">
@@ -305,7 +305,7 @@
                     <h4 class="fw-semi-bold">실시간 수업현황까지</h5>
                     <p>
                       실시간으로 내가 선물한 수강권 사용내역을 확인할 수 있는 <br>
-                      온라인 시스템을 제공해 드려요
+                      온라인 시스템을 제공해 드려요.
                     </p>
                   </div>
                 </div>
@@ -315,11 +315,10 @@
                 <div class="col-lg-6 align-self-center mt-4 mt-lg-0 mt-lg-8">
                   <div class="process-item process-item-last ms-7 ms-sm-8 ms-lg-6"><span class="process-item-number text-primary fw-bold">04</span>
                     <h3 class="fw-semi-bold">
-                      함께 해주신 분들께 <br>
-                      드리는 소정의 마음표시
+                      함께 해주신 분들께 드리는 <br> 소정의 마음표시
                     </h3>
                     <p>
-                      소중한 교육기회를 선물해주신 후원자님께 감사의 마음을 담아 <br>
+                      소중한 수업시간을 선물해주신 후원자님께 감사의 마음을 담아 <br>
                       모바일 인증서 및 뉴스레터를 보내드립니다.
                     </p>
                   </div>
@@ -352,12 +351,13 @@
                   <div class="swiper-slide border border-200 bg-white">
                     <div class="px-3 px-lg-5 py-4">
                       <h4 class="fw-bold mb-4">선명 장학 멘토링 사업에 감사의 마음을 전하며…</h4>
-                      <p class="text-ellipsis text-700">
+                      <p class="text-ellipsis text-700" id="unlock-el1">
                         안녕하세요. <br>
                         저는 이번 선명 장학멘토링에 선정되어 수파자 명문대생과 1:1 과외를 받았던 최영민 학생 엄마입니다. <br>
                         우리 가족은 지난 2017년 소방관이었던 아빠를 하늘로 떠나보내고 엄마인 저, 현재 중1인 영민, 초4인 영윤이와 부지런이 부산에서 살고 있습니다. <br>
-                        현실로 믿기지 않았던 힘든 시간이 지나가고 그렇지만 아이들은 자라고 공부를 꽤 잘 하는 아들에게 <br>
+                        현실로 믿기지 않았던 힘든 시간이 지나가고 그렇지만 아이들은 자라고 공부를 꽤 잘 하는 아들에게 <br class="pc-str">
                         기회를 많이 주고 싶은데 마음처럼 현실은 따라주지 않았습니다. <br>
+                        <br>
                         혼자 벌어 학원까지 보내는 것이 정말 녹록치 않음을 알게 되었거든요. <br>
                         중학생으로 진급을 하게 되자 시간이 더 늘지도 않았는데 학원비는 초등생과 많게는 2배정도 차이가 나기 시작했어요. <br>
                         제가 아이들 학원도 못 보내게 될 정도로 경제적 여력이 되지 못하게 된다는 사실이 정말 마음 아팠습니다. 그러던 중에 선명 장학 멘토링에 선정이 되었고 지방학생으로서는 운좋게 서울에 있는 명문대 선생님과 매칭이 되었습니다. 고려대를 다니는 여학생선생님 이셨는데 매주 성실하게 지도해주셨어요. <br>
@@ -368,10 +368,12 @@
                         모쪼록 이렇게 소중한 기회를 주신 선명 장학회 관계자 분들과 수파자 관계자분들, 그리고 소방청 관계자님들 (일일이 성함을 기억하지 못해 죄송합니다) 우리 영민이를 지도해주셨던 백지연선생님께도 감사의 마음을 전합니다. <br>
                         세상의 따뜻한 마음, 이웃과 어려움을 함께하려는 분들 덕분에 기운빠질 때 또 힘을 낼 수 있는것 같습니다. 저 또한 힘을 내고 아이들에게도 늘 도움에 감사하고, 다른이들과 더불어 살며 봉사하며 (은혜를 나누며) 살아가자고 이야기합니다. <br>
                         감사합니다. <br>
-                        멀리 부산에서 영민이 엄마가 보냅니다.
+                        멀리 부산에서 영민이 엄마가 보냅니다. <br>
+                        <br>
+                        <span class="text-400">*학생 개인정보 보호를 위해 가명을 사용하였습니다.</span>
                       </p>
-                      <div onclick="unlock()">
-                        <div class="text-end mt-5 unlock-btn">
+                      <div onclick="unlock(1)">
+                        <div class="text-end mt-5">
                           READ MORE
                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                             <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
@@ -382,26 +384,47 @@
                   </div>
                   <div class="swiper-slide border border-200 bg-white">
                     <div class="px-3 px-lg-5 py-4">
-                      <h4 class="fw-bold mb-4">선명 장학 멘토링 사업에 감사의 마음을 전하며…</h4>
+                      <h4 class="fw-bold mb-4">안녕하세요, 이번 2022 선명 장학 멘토링에 참여한 학생 엄마입니다.</h4>
                       <p class="text-ellipsis text-700">
-                        안녕하세요. <br>
-                        저는 이번 선명 장학멘토링에 선정되어 수파자 명문대생과 1:1 과외를 받았던 최영민 학생 엄마입니다. <br>
-                        우리 가족은 지난 2017년 소방관이었던 아빠를 하늘로 떠나보내고 엄마인 저, 현재 중1인 영민, 초4인 영윤이와 부지런이 부산에서 살고 있습니다. <br>
-                        현실로 믿기지 않았던 힘든 시간이 지나가고 그렇지만 아이들은 자라고 공부를 꽤 잘 하는 아들에게 <br>
-                        기회를 많이 주고 싶은데 마음처럼 현실은 따라주지 않았습니다. <br>
-                        혼자 벌어 학원까지 보내는 것이 정말 녹록치 않음을 알게 되었거든요. <br>
-                        중학생으로 진급을 하게 되자 시간이 더 늘지도 않았는데 학원비는 초등생과 많게는 2배정도 차이가 나기 시작했어요. <br>
-                        제가 아이들 학원도 못 보내게 될 정도로 경제적 여력이 되지 못하게 된다는 사실이 정말 마음 아팠습니다. 그러던 중에 선명 장학 멘토링에 선정이 되었고 지방학생으로서는 운좋게 서울에 있는 명문대 선생님과 매칭이 되었습니다. 고려대를 다니는 여학생선생님 이셨는데 매주 성실하게 지도해주셨어요. <br>
-                        한 주에 한 챕터씩 과제를 주셨고 영민이가 미루지 않고 그 과제를 하고 주말 2시간을 이어서 풀이를 다 해 주셨기 때문에 아마도 꼼꼼한 복습이 되었다고 생각됩니다. <br>
-                        이번에 학교 공개수업이 있어서 갔더니 같은반 친구가 “영민이 공부 잘해요, 영민이 수학 잘 해요” 라며 저에게 다가와 칭찬을 하더라고요. 아마도 과외가 한몫을 하지 않았나 생각됩니다. <br>
-                        경제적인 도움은 물론이고 우수한 선생님과 1:1로 만나는 기회, 그것을 통해 지속적으로 공부하는 습관을 가질수 있었던 것 같습니다. <br>
-                        저는 옆에서 지켜본 입장이긴 하지만 친구들이 수학을 잘한다고 말하는 것을 듣는 영민이에게도 마음 한켠 자부심이 자라난 시간이 되었을거라 믿습니다. <br>
-                        모쪼록 이렇게 소중한 기회를 주신 선명 장학회 관계자 분들과 수파자 관계자분들, 그리고 소방청 관계자님들 (일일이 성함을 기억하지 못해 죄송합니다) 우리 영민이를 지도해주셨던 백지연선생님께도 감사의 마음을 전합니다. <br>
-                        세상의 따뜻한 마음, 이웃과 어려움을 함께하려는 분들 덕분에 기운빠질 때 또 힘을 낼 수 있는것 같습니다. 저 또한 힘을 내고 아이들에게도 늘 도움에 감사하고, 다른이들과 더불어 살며 봉사하며 (은혜를 나누며) 살아가자고 이야기합니다. <br>
+                        1대1 온라인 학습멘토링이라 학생의 시간을 효율적으로 활용하여 수업함이 좋았습니다. <br>
+                        멘토 선생님께서 학생의 눈높이에 맞추어 잘 가르쳐 주셔서 첫 수업 마치고 부터 학생이 매우 만족해 해서 고마웠습니다. <br>
+                        수업 집중력도 높아 수업하는 날을 즐거운 마음으로 기다리는 모습이 보기 좋았습니다. <br>
+                        멘토 선생님께서 지난 3개월 동안 훌륭하게 열심히 잘 가르쳐 주신 덕분에 이번 중간고사 시험성적도 향상되어 더 감사하게 생각하고 있습니다. <br>
+                        이렇게 좋은 인강을 들을 수 있도록 애써 주신 모든 수파자 관계자님과 멘토 선생님께 다시한번 진심으로 감사의 인사를 전합니다. <br>
+                        <br>
+                        모두 건강하시고 수파자가 더 많은 학생들에게 널리 보급되기를 기대합니다. <br> 
+                        <br>
                         감사합니다. <br>
-                        멀리 부산에서 영민이 엄마가 보냅니다.
+                        <br>
+                        - 김민지 학생 학부모- <br>
+                        <br>
+                        <span class="text-400">*학생 개인정보 보호를 위해 가명을 사용하였습니다.</span>
                       </p>
-                      <div onclick="unlock()">
+                    </div>
+                  </div>
+                  <div class="swiper-slide border border-200 bg-white">
+                    <div class="px-3 px-lg-5 py-4">
+                      <h4 class="fw-bold mb-4">학교 공부, 논술, 책 읽기까지.. 멘토 선생님 정말 감사합니다.</h4>
+                      <p class="text-ellipsis text-700" id="unlock-el2">
+                        멘토 선생님, 멘토링 진행하는 동안 친절하게 말씀해 주시고 멘토링이 끝나는 날 수업은 끝났지만 개인적으로 궁금하거나 물어보고 싶은 거 있으면 언제든지 연락해도 된다고 하셔서 아이가 엄청 감동받았습니다. <br>
+                        저는 수파자가 의무적으로 수업을 하고 무료시간이 끝나면 유료로 전환하도록 유도하고 부담 주면 어떻하나 내심 걱정도 했습니다. <br>
+                        그런데 전혀 그러지 않고 오히려 공부하다 어렵거나 궁금한거 있으면 따로 연락하라니 정말 좋은 분을 만난 덕분에 따뜻하게 수업을 잘 받은 것 같아 너무 좋았습니다. <br>
+                        저희 아이는 한 번도 논술 수업을 받아보지 못했습니다. 그러다 보니 다른 아이들에 비해 표현력도 그렇고 감상평이나 줄거리 요약 부분에는 터무니없이 부족한 실력이었습니다. <br>
+                        논술 자체를 싫어해서 학원도 안 다니려 하던 아이였는데 이번에 멘토 선생님과 수업이 좋았는지 논술학원에 다녀보겠다고 하더군요. <br>
+                        수업 시간에도 친절하게 하나하나 잡아주시면서 말도 예쁘게 해주셨다며 저희 아이가 헤어짐을 아쉬워했습니다. 수업방식은 미리 선생님께서 수업할 부분을 책을 통해 읽고 수업 시간에 책에 대한 내용을 요약정리하며 자신에 대한 생각을 얘기하며 마무리했습니다. <br>
+                        이런 과정을 반복해서 하다 보니 저희 아이도 책 읽는 것을 재밌어하고 줄거리 요약하는데 도움을 많이 받은 것 같습니다. 감사합니다. <br>
+                        또한, 멘토링 프로그램 기회 제공해 도움을 주신 분들께 진심으로 감사 인사드립니다. <br>
+                        이런 기회를 제공해 주지 않았다면 수파자라는 것을 몰랐을 것 같아요. 저희 아이도 이런 좋은 기회를 제공받아 도움을 받았으니 자신도 커서 멋진 선배님이 되면 자신이 받았던 것처럼 후배들에게 도움을 줄 수 있는 선배가 되고 싶다고 하더라구요. 공부 프로그램을 제공받은 것 플러스
+                        선행이라는 봉사도 활동도 스스로 깨우칠 수 있는 기회를 만들어주신 것 같습니다. <br>
+                        학력 좋은 선생님들이 자신이 학교 때 겪었던 것들을 토대로 아이들과 소통하면 선배로서 조언도 해주며 학습을 이어가는 모습이 보기 좋았습니다. 그런 선생님을 보면서 아이도 열심히 공부해서 선생님처럼 후배 챙겨주는 좋은 일 하고 싶다고 얘기하네요. <br>
+                        공부를 잘해야겠다는 의지를 키우게 된 계기를 만들어준 수파자에게 다시 한번 감사 인사드리며, 주변 분들께도 수파자의 이런 선행을 널리 전파하여 수파자가 발전할 수 있도록 기여할 수 있게 노력하겠습니다. <br>
+                        다시 한번 진심으로 감사합니다. <br>
+                        <br>
+                        - 강호림 학생 학부모- <br>
+                        <br>
+                        <span class="text-400">*학생 개인정보 보호를 위해 가명을 사용하였습니다.</span>
+                      </p>
+                      <div onclick="unlock(2)">
                         <div class="text-end mt-5">
                           READ MORE
                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
@@ -409,6 +432,42 @@
                           </svg>
                         </div>
                       </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide border border-200 bg-white">
+                    <div class="px-3 px-lg-5 py-4">
+                      <h4 class="fw-bold mb-4">선생님, 모르는 문제도 항상 친절하게 알려주셔서 감사해요.</h4>
+                      <p class="text-ellipsis text-700">
+                        제가 모르는 문제를 물어볼 때마다 항상 친절하게 알려주셔서 감사드려요. 선명 장학 멘토링에서 선생님을 만나고, 잘가르쳐 주신 덕분에 이번 시험에서 수학 점수가 저번 시험 보다 20점 이상 올랐어요. <br>
+                        3개월 동안 함께해 주셔서 정말 감사드립니다. <br>
+                        또한 선명 장학 멘토링 프로그램 기회를 제공해 주신 분들께 진심의 마음을 전해드립니다. <br>
+                        혼자서 못 푸는 문제를 선명 장학 멘토링 프로그램을 하면서 알 수 있었고 화상수업으로 진행하면서 언제 어디서든 수업을 들을 수 있었고, 공부하기 좋은 환경을 제공해주셔서 훨씬 공부에 집중할 수 있었습니다. <br>
+                        다시 한번 멘토링 프로그램에 참여할 수 있는 기회를 제공해 주셔서 감사합니다. <br>
+                        <br>
+                        - 이민기 학생 올림- <br>
+                        <br>
+                        <span class="text-400">*학생 개인정보 보호를 위해 가명을 사용하였습니다.</span>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="swiper-slide border border-200 bg-white">
+                    <div class="px-3 px-lg-5 py-4">
+                      <h4 class="fw-bold mb-4">
+                        선생님, 주말마다 숙제하느라 힘들었지만 
+                        지나고 보니 복습이 정말 많이 되었고 
+                        덕분에 수학에 자신감이 많이 붙은 거 같아요.
+                      </h4>
+                      <p class="text-ellipsis text-700">
+                        항상 좋은 수업과 열정적으로 수업 진행해 주셔서 감사합니다. 
+                        더불어, 멘토링 프로그램 기회를 제공해 주신 분들께 감사드립니다. <br> 
+                        선명 장학 멘토링을 통해 좋은 멘토 선생님을 만날 수 있었으며, 
+                        부모님 부담을 줄여줄 수 있어 감사했습니다. 멘토링 프로그램으로 인해 주말마다 숙제를 하며 수학에 대한 자신감과 수학을 다질 수 있는 수 있는 소중한 시간이 되었어요. <br>
+                        좋은 기회를 제공해 주셔서 감사합니다. <br>
+                        <br>
+                        - 박진주 학생 올림- <br>
+                        <br>
+                        <span class="text-400">*학생 개인정보 보호를 위해 가명을 사용하였습니다.</span>
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -437,29 +496,24 @@
               <h3 class="fw-semi-bold">아이들에게 교육 기회를 선물해주신 분들</h3>
             </div>
             <div class="col-12">
-              <div class="swiper-container theme-slider h-100" data-swiper='{"autoplay":{"delay":5000,"disableOnInteraction":false},"loop":true,"spaceBetween":30,"breakpoints":{"576":{"slidesPerView":1},"768":{"slidesPerView":2},"992":{"slidesPerView":3}}}' data-zanim-lg='{"animation":"zoom-out","delay":0}' data-zanim-trigger="scroll">
+              <!-- "autoplay":{"delay":5000,"disableOnInteraction":false}, -->
+              <div class="swiper-container theme-slider h-100" data-swiper='{"loop":true,"spaceBetween":30,"breakpoints":{"576":{"slidesPerView":1},"768":{"slidesPerView":2},"992":{"slidesPerView":3}}}' data-zanim-lg='{"animation":"zoom-out","delay":0}' data-zanim-trigger="scroll">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide border border-200"><a href="#!"><img class="rounded w-100" src="./assets/img/person1.png" alt="" />
                       <div class="px-3 px-xl-5">
-                        <h4 class="mt-3 fs-0 fw-bold">연예인 이름 및 간단소개</h4>
-                        <p class="font-sans-serif d-inline-block text-700">설명
-                        </p>
+                        <h4 class="my-3 fs-0 fw-semi-bold">시크릿넘버 레아</h4>
                       </div>
                     </a>
                   </div>
                   <div class="swiper-slide border border-200"><a href="#!"><img class="rounded w-100" src="./assets/img/person2.png" alt="" />
                       <div class="px-3 px-xl-5">
-                        <h4 class="mt-3 fs-0 fw-bold">연예인 이름 및 간단소개</h4>
-                        <p class="font-sans-serif d-inline-block text-700">설명
-                        </p>
+                        <h4 class="my-3 fs-0 fw-semi-bold">장철수 감독</h4>
                       </div>
                     </a>
                   </div>
                   <div class="swiper-slide border border-200"><a href="#!"><img class="rounded w-100" src="./assets/img/person3.png" alt="" />
                       <div class="px-3 px-xl-5">
-                        <h4 class="mt-3 fs-0 fw-bold">연예인 이름 및 간단소개</h4>
-                        <p class="font-sans-serif d-inline-block text-700">설명
-                        </p>
+                        <h4 class="my-3 fs-0 fw-semi-bold">카라 박규리</h4>
                       </div>
                     </a>
                   </div>
@@ -482,14 +536,17 @@
       <!-- action begin ============================-->
       <section class="py-8" id="LandingDownload" style="background-color: #FBF4EE;">
         <div class="container">
-          <div class="row flex-center">
-            <div class="col-md-7 text-center text-md-start">
-              <h3 class="fw-semi-bold bg-">나도 선물하러 가기</h3>
-              <p class="fw-normal">여러분의 소중한 수강권 선물이 교육 격차 해소에 큰 도움이 됩니다.</p>
+          <div class="d-flex justify-content-between flex-md-row flex-column align-items-center">
+            <div class="text-center text-md-start">
+              <h3 class="fw-semi-bold">나도 선물하러 가기</h3>
+              <p class="fw-normal text-dark mt-4 onlyPC">여러분의 소중한 수업시간 선물이 교육 불평등 해소의 시작입니다. <br> 기부하기를 통해 아이들에게 인생 멘토와의 만남을 선물해보세요.</p>
             </div>
-            <div class="col-md-5 text-center mt-4 mt-md-0">
-              <a class="btn btn-primary fs-1" href="#!">
-                <h4 class="fw-semi-bold text-white m-0">수강권 선물하기</h4>
+            <div>
+              <img class="pc-img" src="./assets/img/action.png" alt="">
+            </div>
+            <div class="text-center mt-4 mt-md-0">
+              <a class="btn btn-primary fs-1 px-3" href="#!">
+                <h4 class="fw-semi-bold text-white m-0" style="letter-spacing: 0.5px;">수업시간 선물하기</h4>
               </a>
             </div>
           </div>
